--- a/src/app.sass
+++ b/src/app.sass
@@ -1,7 +1,18 @@
+@font-face 
+    font-family: face
+    src: url(public/fonts/newyork/NewYork.otf)
+
 body.wedding
-    background: #f3f2f1
-    font-family: fg
+    background: #F8F8F8
+    font-family: "Special Elite", serif
+    font-optical-sizing: auto
+    // font-size: 1.2rem
+    line-height: 2rem
+    font-weight: 200
     margin: 0
 
     h1, h2, h3, h4, h5, h6
+        font-family: face
         color: #948379
+
+
